<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/signupback"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_margin="10dp"
        app:cardBackgroundColor="#00FFFFFF">

        <LinearLayout
            android:layout_width="400dp"
            android:layout_height="621dp"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/regtxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/registerr"
                android:textAlignment="center"
                android:textColor="@color/my_primarycolor"
                android:textSize="36dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtName"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:hint="@string/full_name"
                    android:inputType="textPersonName"
                    android:paddingStart="10dp"
                    android:textColor="@color/my_primarycolor" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtemail1"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress"
                    android:paddingStart="10dp"
                    android:textColor="@color/my_primarycolor" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtmobile"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:hint="@string/mobile_no"
                    android:inputType="phone"
                    android:paddingStart="10dp"
                    android:textColor="@color/my_primarycolor" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtpassword2"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    android:textColor="@color/my_primarycolor" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtRepassword2"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    android:textColor="@color/my_primarycolor" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnReg"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/button"
                android:text="@string/register"

                android:textColor="@color/white"
                android:textSize="20dp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/txtAlready"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:alpha="0.7"
                android:text="@string/already_have_an_account_sign_in"
                android:textColor="@color/my_primarycolor" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>