<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/loginback"
    tools:context=".Login">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        app:cardBackgroundColor="#00FFFFFF"
        app:cardCornerRadius="10dp"
        android:layout_margin="10dp"
        >

        <LinearLayout
            android:layout_width="400dp"
            android:layout_height="455dp"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/logintxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="@color/my_primarycolor"
                android:textSize="36dp" />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:hint="@string/email"
                    android:paddingStart="10dp"
                    android:inputType="textEmailAddress"

                    android:textColor="@color/my_primarycolor" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:hint="@string/password1"
                    android:paddingStart="10dp"
                    android:textColor="@color/my_primarycolor"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/btnLogin"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/button"
                android:text="@string/loginbtn"
                android:textColor="@color/white"
                android:textSize="20dp" />

            <RelativeLayout
                android:id="@+id/Relativelayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </RelativeLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="15dp" />

            <TextView
                android:id="@+id/Forgetpass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:alpha="0.7"
                android:textSize="15dp"
                android:text="@string/forget_password1"
                android:textColor="@color/my_primarycolor" />

            <TextView
                android:id="@+id/txtNeed"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:alpha="0.7"
                android:textSize="15dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/my_primarycolor"
                android:text="@string/need_an_account_sign_up"
                 />


        </LinearLayout>

    </androidx.cardview.widget.CardView>







</LinearLayout>