<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/changepassback"
    tools:context=".ChangePass">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="430dp"
        app:cardBackgroundColor="#00FFFFFF"
        android:layout_margin="10dp"
        app:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="400dp"
            android:layout_height="600dp"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/chgtxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_password1"
                android:textAlignment="center"
                android:textColor="@color/my_primarycolor"
                android:textSize="36dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/oldPassword"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:hint="@string/old_password"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    android:textColor="@color/my_primarycolor" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/newPassword"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:hint="@string/new_password"
                    android:paddingStart="10dp"
                    android:textColor="@color/my_primarycolor"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirmPassword"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:hint="@string/conform_new_password"
                    android:paddingStart="10dp"
                    android:textColor="@color/my_primarycolor"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/btnChangePass"
                android:layout_width="300dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:text="@string/update"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                android:textSize="20dp"
                tools:ignore="TextContrastCheck" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>