<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/forgetpassback"
    tools:context=".ForgetPassword">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="350dp"
        app:cardBackgroundColor="#00FFFFFF"
        app:cardCornerRadius="10dp"
        android:layout_margin="10dp"
        >

        <LinearLayout
            android:layout_width="400dp"
            android:layout_height="455dp"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/logintxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forget_password"
                android:textAlignment="center"
                android:textColor="@color/my_primarycolor"
                android:textSize="36dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/EmailAssociate"
                android:textAlignment="center"
                android:textColor="@color/my_primarycolor"
                android:textSize="15dp" />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:id="@+id/username"
                android:layout_gravity="center">

                <com.google.android.material.textfield.TextInputEditText

                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:hint="@string/email_address1"
                    android:paddingStart="10dp"
                    android:inputType="text"
                    android:textColor="@color/my_primarycolor" />
            </com.google.android.material.textfield.TextInputLayout>

             <Button
                android:id="@+id/sentMail"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/button"
                android:text="@string/send_mail"
                android:textColor="@color/white"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/signUp"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:textSize="15dp"
                android:textColor="@color/my_primarycolor"
                android:text="Don't have an Account? Sign Up"
                android:layout_gravity="center"/>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>